trying to upload

--- a/src/css/netdrop.sass
+++ b/src/css/netdrop.sass
@@ -1,3 +1,14 @@
 #dirlist
   max-height: 40vh
   overflow-y: scroll
+
+.progressOverlay
+   position: fixed
+   width: 100vw
+   height: 100vh
+   box-sizing: border-box
+   padding: 35vh 10vw
+   background-color: rgba(128, 128, 128, 0.4)
+   top: 0
+   left: 0
+   z-index: 2
