--- a/web/static/netdrop.css
+++ b/web/static/netdrop.css
@@ -3,4 +3,16 @@
   overflow-y: scroll;
 }
 
+.progressOverlay {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  box-sizing: border-box;
+  padding: 35vh 10vw;
+  background-color: rgba(128, 128, 128, 0.4);
+  top: 0;
+  left: 0;
+  z-index: 2;
+}
+
 /*# sourceMappingURL=netdrop.css.map */
