--- a/web/static/netdrop.css
+++ b/web/static/netdrop.css
@@ -3,7 +3,7 @@
   overflow-y: scroll;
 }
 
-.progressOverlay {
+.progressOverlay, .overlay {
   position: fixed;
   width: 100vw;
   height: 100vh;
@@ -13,6 +13,27 @@
   top: 0;
   left: 0;
   z-index: 2;
+}
+
+.overlay {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 0;
+}
+.overlay form {
+  width: 50%;
+  box-sizing: border-box;
+  padding: 2em;
+  border-radius: 10px;
+  position: relative;
+}
+.overlay form i {
+  position: absolute;
+  top: 1em;
+  right: 1em;
+  cursor: pointer;
 }
 
 /*# sourceMappingURL=netdrop.css.map */
