--- a/src/css/netdrop.sass
+++ b/src/css/netdrop.sass
@@ -38,3 +38,7 @@
   z-index: -1
   width: 100%
   background-color: rgba(128, 128, 128, 0.5)
+  border-radius: 0.25rem
+  display: flex
+  justify-content: center
+  align-items: center
