--- a/web/static/netdrop.css
+++ b/web/static/netdrop.css
@@ -43,6 +43,10 @@
   z-index: -1;
   width: 100%;
   background-color: rgba(128, 128, 128, 0.5);
+  border-radius: 0.25rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /*# sourceMappingURL=netdrop.css.map */
