--- a/web/static/netdrop.css
+++ b/web/static/netdrop.css
@@ -1,10 +1,390 @@
-#dirlist {
-  max-height: 40vh;
-  overflow-y: scroll;
-  position: relative;
+:root {
+  --main-ovca: #00ffca;
+  --secondary-ovca: #00ddb9;
 }
 
-.progressOverlay, .overlay {
+[data-theme=dark] {
+  --main-color: #f8f8f8;
+  --main-bg-color: #080808;
+  --secondary-bg-color: #181818;
+  --secondary-color: #e8e8e8;
+}
+
+[data-theme=light] {
+  --main-color: #080808;
+  --main-bg-color: #f8f8f8;
+  --secondary-color: #181818;
+  --secondary-bg-color: #e8e8e8;
+}
+
+.overlay i, #tab-overlay i {
+  position: absolute;
+  top: 1em;
+  right: 1em;
+  cursor: pointer;
+}
+
+button {
+  background-color: var(--main-color) !important;
+  border-color: var(--main-color) !important;
+  color: var(--main-bg-color) !important;
+  margin: 0 !important;
+}
+
+button:hover {
+  background-color: var(--secondary-color) !important;
+  border-color: var(--secondary-color) !important;
+  color: var(--main-bg-color) !important;
+}
+
+button.button-clear,
+button.button-outline {
+  background-color: transparent !important;
+  color: var(--main-color) !important;
+}
+
+.button-highlight, button[type=submit] {
+  background-color: var(--main-ovca) !important;
+  border-color: var(--main-ovca) !important;
+  color: black !important;
+}
+
+.button-highlight:hover, button[type=submit]:hover {
+  background-color: var(--secondary-ovca) !important;
+  border-color: var(--secondary-ovca) !important;
+  color: black !important;
+}
+
+.button-highlight.button-clear,
+.button-highlight.button-outline {
+  color: #00ffca !important;
+}
+
+button.button-clear {
+  border-color: transparent !important;
+}
+
+button.button-clear:hover {
+  background-color: var(--secondary-bg-color) !important;
+}
+
+.button-small {
+  font-size: 0.8rem;
+  height: 2.8rem;
+  line-height: 2.8rem;
+  padding: 0 1.5rem;
+}
+
+.button-large {
+  font-size: 1.4rem;
+  height: 4.5rem;
+  line-height: 4.5rem;
+  padding: 0 2rem;
+}
+
+input:focus {
+  border-color: var(--main-ovca) !important;
+}
+
+.m-1 {
+  margin: 0.25rem !important;
+}
+
+.m-2 {
+  margin: 0.5rem !important;
+}
+
+.m-3 {
+  margin: 1rem !important;
+}
+
+.m-4 {
+  margin: 1.5rem !important;
+}
+
+.m-5 {
+  margin: 3rem !important;
+}
+
+.m-auto {
+  margin: auto !important;
+}
+
+.mt-1 {
+  margin-top: 0.25rem !important;
+}
+
+.mt-2 {
+  margin-top: 0.5rem !important;
+}
+
+.mt-3 {
+  margin-top: 1rem !important;
+}
+
+.mt-4 {
+  margin-top: 1.5rem !important;
+}
+
+.mt-5 {
+  margin-top: 3rem !important;
+}
+
+.mt-auto {
+  margin-top: auto !important;
+}
+
+.ml-1 {
+  margin-left: 0.25rem !important;
+}
+
+.ml-2 {
+  margin-left: 0.5rem !important;
+}
+
+.ml-3 {
+  margin-left: 1rem !important;
+}
+
+.ml-4 {
+  margin-left: 1.5rem !important;
+}
+
+.ml-5 {
+  margin-left: 3rem !important;
+}
+
+.ml-auto {
+  margin-left: auto !important;
+}
+
+.mb-1 {
+  margin-bottom: 0.25rem !important;
+}
+
+.mb-2 {
+  margin-bottom: 0.5rem !important;
+}
+
+.mb-3 {
+  margin-bottom: 1rem !important;
+}
+
+.mb-4 {
+  margin-bottom: 1.5rem !important;
+}
+
+.mb-5 {
+  margin-bottom: 3rem !important;
+}
+
+.mb-auto {
+  margin-bottom: auto !important;
+}
+
+.mr-1 {
+  margin-right: 0.25rem !important;
+}
+
+.mr-2 {
+  margin-right: 0.5rem !important;
+}
+
+.mr-3 {
+  margin-right: 1rem !important;
+}
+
+.mr-4 {
+  margin-right: 1.5rem !important;
+}
+
+.mr-5 {
+  margin-right: 3rem !important;
+}
+
+.mr-auto {
+  margin-right: auto;
+}
+
+.p-1 {
+  padding: 0.25rem !important;
+}
+
+.p-2 {
+  padding: 0.5rem !important;
+}
+
+.p-3 {
+  padding: 1rem !important;
+}
+
+.p-4 {
+  padding: 1.5rem !important;
+}
+
+.p-5 {
+  padding: 3rem !important;
+}
+
+.pt-1 {
+  padding-top: 0.25rem !important;
+}
+
+.pt-2 {
+  padding-top: 0.5rem !important;
+}
+
+.pt-3 {
+  padding-top: 1rem !important;
+}
+
+.pt-4 {
+  padding-top: 1.5rem !important;
+}
+
+.pt-5 {
+  padding-top: 3rem !important;
+}
+
+.pl-1 {
+  padding-left: 0.25rem !important;
+}
+
+.pl-2 {
+  padding-left: 0.5rem !important;
+}
+
+.pl-3 {
+  padding-left: 1rem !important;
+}
+
+.pl-4 {
+  padding-left: 1.5rem !important;
+}
+
+.pl-5 {
+  padding-left: 3rem !important;
+}
+
+.pb-1 {
+  padding-bottom: 0.25rem !important;
+}
+
+.pb-2 {
+  padding-bottom: 0.5rem !important;
+}
+
+.pb-3 {
+  padding-bottom: 1rem !important;
+}
+
+.pb-4 {
+  padding-bottom: 1.5rem !important;
+}
+
+.pb-5 {
+  padding-bottom: 3rem !important;
+}
+
+.pr-1 {
+  padding-right: 0.25rem !important;
+}
+
+.pr-2 {
+  padding-right: 0.5rem !important;
+}
+
+.pr-3 {
+  padding-right: 1rem !important;
+}
+
+.pr-4 {
+  padding-right: 1.5rem !important;
+}
+
+.pr-5 {
+  padding-right: 3rem !important;
+}
+
+.loader,
+.loader:after {
+  border-radius: 50%;
+  width: 1.2em;
+  height: 1.2em;
+}
+
+.loader {
+  font-size: 1em;
+  position: relative;
+  text-indent: -9999em;
+  border: 0.2em solid transparent;
+  border-left-color: var(--main-color);
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-animation: load8 1.1s infinite linear;
+  animation: load8 1.1s infinite linear;
+}
+
+@-webkit-keyframes load8 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+@keyframes load8 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+@keyframes progress-bar-stripes {
+  from {
+    background-position: 2rem 0;
+  }
+  to {
+    background-position: 0 0;
+  }
+}
+.progress {
+  display: flex;
+  height: 2rem;
+  width: 100%;
+  border-radius: 0.5rem;
+  overflow: hidden;
+  background-color: var(--secondary-bg-color);
+}
+.progress .bar {
+  color: black;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-size: 2rem 2rem;
+  background-color: var(--secondary-ovca);
+  transition: width 0.75s;
+  animation: progress-bar-stripes 1s linear infinite;
+  background-image: linear-gradient(45deg, var(--main-ovca) 25%, transparent 25%, transparent 50%, var(--main-ovca) 50%, var(--main-ovca) 75%, transparent 75%, transparent);
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  -webkit-box-shadow: 0 0 0 30px rgba(0, 0, 0, 0) inset !important;
+  -webkit-text-fill-color: var(--main-color);
+  transition: background-color 5000s ease-in-out 0s;
+}
+
+.progressOverlay, .overlay, #tab-overlay {
   position: fixed;
   width: 100vw;
   height: 100vh;
@@ -16,25 +396,198 @@
   z-index: 3;
 }
 
-.overlay {
+.overlay, #tab-overlay {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
   padding: 0;
 }
+
 .overlay form {
-  width: 50%;
+  display: flex;
+  flex-direction: column;
   box-sizing: border-box;
-  padding: 2em;
-  border-radius: 10px;
+  padding: 4rem;
+  border-radius: 0.5rem;
+  position: relative;
+  background-color: var(--main-bg-color);
+  width: 50%;
+}
+.overlay form [type=button] {
+  align-self: flex-end;
+}
+.overlay form button[type=submit] {
+  width: 100%;
+}
+.overlay .hold-image-view {
+  box-sizing: border-box;
+  padding: 5rem;
+  max-width: 90vw;
+  max-height: 90vh;
+  background-color: var(--main-bg-color);
+  border-radius: 0.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   position: relative;
 }
-.overlay form i {
+.overlay .hold-image-view img {
+  max-width: 100%;
+  max-height: 100%;
+  border-radius: 0.5rem;
+}
+
+.progress-bg, #add-inner {
+  box-sizing: border-box;
+  padding: 4rem;
+  border-radius: 0.5rem;
+  position: relative;
+  background-color: var(--main-bg-color);
+  width: 50%;
+}
+.progress-bg .buttons, #add-inner .buttons {
+  display: flex;
+  justify-content: space-between;
+}
+.progress-bg .buttons button, .progress-bg .buttons label, #add-inner .buttons button, #add-inner .buttons label {
+  width: 45%;
+}
+.progress-bg .buttons button button, .progress-bg .buttons label button, #add-inner .buttons button button, #add-inner .buttons label button {
+  width: 100%;
+}
+
+.progress-bg {
+  width: 50vw;
+  box-sizing: content-box;
+  text-align: center;
+}
+
+html {
+  min-height: 100vh;
+}
+
+body {
+  background-color: var(--main-bg-color);
+  color: var(--main-color);
+  margin: 0;
+  width: 100vw;
+  overflow-x: hidden;
+}
+
+#dirlist {
+  max-height: 40vh;
+  overflow-y: scroll;
+  position: relative;
+}
+
+#add-tab {
+  align-items: center;
+  display: flex;
+}
+#add-tab .button-small {
+  align-self: flex-end;
+}
+
+nav {
+  align-items: center;
+}
+
+#nav-account, #login-column {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+#theme-button {
   position: absolute;
-  top: 1em;
-  right: 1em;
+  bottom: 1rem;
+  right: 1rem;
+}
+
+.text-error {
+  color: red !important;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.block {
+  display: block;
+}
+
+input[type=checkbox] {
+  width: 0.9em;
+  height: 0.9em;
+  vertical-align: bottom;
   cursor: pointer;
+}
+
+label {
+  cursor: pointer;
+  user-select: none;
+}
+
+input {
+  color: var(--main-color);
+}
+
+.dropdown {
+  position: relative;
+}
+.dropdown section {
+  background-color: var(--main-color);
+  position: absolute;
+  top: 4.2rem;
+  right: 0;
+  border-radius: 0.5rem;
+  overflow: hidden;
+}
+.dropdown section div {
+  padding: 1rem 2rem;
+}
+.dropdown section div p {
+  margin: 1em 0;
+  display: block;
+}
+.dropdown section div:hover {
+  background-color: var(--secondary-color);
+}
+
+.dir-table {
+  width: 100%;
+  margin: 0;
+  position: relative;
+}
+.dir-table tr:last-child td {
+  border: none;
+}
+
+.hold-table {
+  position: relative;
+  display: block;
+  width: 100%;
+  margin-bottom: 1rem;
+  border-radius: 0.5rem;
+  overflow: hidden;
+}
+.hold-table section {
+  position: relative;
+  overflow-y: scroll;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+  max-height: 50vh;
+  background-color: var(--main-bg-color);
+}
+
+.hold-table section::-webkit-scrollbar {
+  display: none;
+}
+
+.dir-root {
+  box-sizing: border-box;
+  padding: 0 2rem;
 }
 
 .dropzone-root {
@@ -42,11 +595,41 @@
   position: absolute;
   z-index: -1;
   width: 100%;
-  background-color: rgba(128, 128, 128, 0.5);
+  background-color: var(--secondary-bg-color);
   border-radius: 0.25rem;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.dropzone-root h3 {
+  line-height: 0;
+}
+
+.dir-item:hover {
+  background-color: var(--secondary-bg-color);
+}
+
+input[type=file] {
+  display: none;
+}
+
+#item-menu {
+  position: absolute;
+  border-radius: 0.25rem;
+  background-color: var(--main-bg-color);
+  box-shadow: 0 0 0.5rem var(--secondary-bg-color);
+  overflow: hidden;
+}
+#item-menu h5 {
+  text-align: center;
+  padding: 1rem 4rem;
+  margin-bottom: 1rem;
+  min-width: 12vw;
+}
+#item-menu button {
+  width: 100%;
+  border-radius: 0;
+  display: block;
 }
 
 /*# sourceMappingURL=netdrop.css.map */
