--- a/src/css/comps/browser.sass
+++ b/src/css/comps/browser.sass
@@ -5,3 +5,22 @@ input:-webkit-autofill:active
     -webkit-box-shadow: 0 0 0 30px rgba(0, 0, 0, 0) inset !important
     -webkit-text-fill-color: var(--main-color)
     transition: background-color 5000s ease-in-out 0s
+
+input:autofill
+  background: var(--main-bg-color)
+
+::-webkit-scrollbar
+  width: 0.5rem
+  height: 0.5rem
+
+::-webkit-scrollbar-track
+  background: var(--secondary-bg-color)
+
+::-webkit-scrollbar-thumb
+  background: var(--secondary-color)
+
+::-webkit-scrollbar-thumb:hover
+  background: var(--main-color)
+
+::-webkit-scrollbar-corner
+  background: transparent
