--- a/src/css/comps/extend_milligram.sass
+++ b/src/css/comps/extend_milligram.sass
@@ -2,7 +2,7 @@ button
   background-color: var(--main-color) !important
   border-color: var(--main-color) !important
   color: var(--main-bg-color) !important
-  margin: 0 !important
+  margin: 0
 
 button:hover
   background-color: var(--secondary-color) !important
@@ -18,6 +18,7 @@ button.button-outline
   background-color: var(--main-ovca) !important
   border-color: var(--main-ovca) !important
   color: black !important
+  transition: none !important
 
 .button-highlight:hover, button[type="submit"]:hover
   background-color: var(--secondary-ovca) !important
@@ -34,12 +35,14 @@ button.button-clear
 button.button-clear:hover
   background-color: var(--secondary-bg-color) !important
 
-.button-small
-  font-size: .8rem
-  height: 2.8rem
-  line-height: 2.8rem
-  padding: 0 1.5rem
+button[disabled]
+  pointer-events: none
 
+.button-small
+  font-size: 1rem
+  height: 3.3rem
+  line-height: 3.3rem
+  padding: 0 2.2rem
 
 .button-large
   font-size: 1.4rem
@@ -47,5 +50,13 @@ button.button-clear:hover
   line-height: 4.5rem
   padding: 0 2rem
 
-input:focus
+input:focus, textarea:focus
   border-color: var(--main-ovca) !important
+
+pre
+  border-left-color: var(--main-ovca)
+
+td, th
+  font-size: 1.4rem
+  line-height: 1.4rem
+  border-color: var(--secondary-bg-color)
