--- a/src/css/comps/overlays.sass
+++ b/src/css/comps/overlays.sass
@@ -35,7 +35,11 @@
     button[type="submit"]
       width: 100%
 
-  .hold-image-view
+  .full
+    height: 90vh
+    width: 90vw
+
+  .hold-view
     box-sizing: border-box
     padding: 5rem
     max-width: 90vw
@@ -47,12 +51,54 @@
     justify-content: center
     position: relative
 
+    .hold-text
+      width: 100%
+      height: 100%
+
     img
       max-width: 100%
       max-height: 100%
       border-radius: 0.5rem
 
-.progress-bg, #add-inner
+    .hold-text
+
+      textarea
+        margin-top: 1rem
+        height: calc(100% - 3rem)
+        background-color: var(--secondary-bg-color)
+        resize: none
+        color: var(--main-color)
+        font-family: monospace, monospace
+        padding: 1rem 1.5rem
+        font-size: 86%
+        line-height: 160%
+
+      .hold-buttons
+        display: flex
+
+        button:not(:last-child)
+          margin-right: 1rem !important
+          display: inline-block
+
+        .dropdown
+          div
+            padding: 1rem 2rem
+
+      pre
+        width: 100%
+        height: calc(100% - 3rem)
+        overflow: hidden
+        border-radius: 0.5rem
+        background-color: var(--secondary-bg-color)
+
+        code
+          color: var(--main-color)
+          background-color: var(--secondary-bg-color)
+          width: calc(100% - 0.3rem)
+          height: 100%
+          overflow: auto
+
+.progress-bg, #add-inner, #profile, #guide-inner
   box-sizing: border-box
   padding: 4rem
   border-radius: 0.5rem
@@ -66,11 +112,62 @@
 
     button, label
       width: 45%
+      word-wrap: break-word
+      display: inline-block
+      height: auto
+      white-space: normal
+      line-height: 1.6rem
+      padding: 1rem 2.4rem
 
       button
         width: 100%
+
+
+    label
+      padding: 0
 
 .progress-bg
   width: 50vw
   box-sizing: content-box
   text-align: center
+
+#add-inner
+  form
+    width: 100% !important
+
+#profile
+
+  .fa-pen
+    font-size: 2.4rem
+    margin-left: 1rem
+    cursor: pointer
+
+  .overlay
+    z-index: 4
+
+#hold-guide
+  display: flex
+  justify-content: flex-end
+  margin: 0 2rem
+
+  #guide-inner
+    img
+      width: 100%
+      border-radius: .25rem
+      margin-bottom: 2rem
+    h2
+      display: inline-block
+      border-bottom: 1px solid var(--main-ovca)
+    .buttons
+      button
+        width: auto
+        font-size: 1.2rem
+
+  #guide-button
+    display: inline-block
+    position: relative
+    font-size: 2rem
+    cursor: pointer
+
+.overlay--strong
+  background-color: #111b
