--- a/src/css/netdrop.sass
+++ b/src/css/netdrop.sass
@@ -5,6 +5,10 @@
 @use "comps/loader"
 @use "comps/browser"
 @use "comps/overlays"
+@use "comps/class_misc"
+@use "comps/id_misc"
+@use "comps/responsive"
+@use "text-themes/themes"
 
 html
   min-height: 100vh
@@ -16,39 +20,27 @@ body
   width: 100vw
   overflow-x: hidden
 
-#dirlist
-  max-height: 40vh
-  overflow-y: scroll
-  position: relative
-
-#add-tab
-  align-items: center
-  display: flex
-
-  .button-small
-    align-self: flex-end
-
 nav
-  align-items: center
-
-#nav-account, #login-column
   display: flex
-  justify-content: flex-end
   align-items: center
+  justify-content: space-between
+  margin: 2rem
 
-#theme-button
-  position: absolute
-  bottom: 1rem
-  right: 1rem
+  #nav-title
+    flex-grow: 7
+    display: flex
+    align-items: flex-start
 
-.text-error
-  color: red !important
+    svg
+      height: 3rem
 
-.text-center
-  text-align: center
+    h3
+      margin: 0
 
-.block
-  display: block
+nav > div:last-child
+    flex-grow: 1
+    display: flex
+    justify-content: space-between
 
 input[type="checkbox"]
   width: 0.9em
@@ -63,91 +55,5 @@ label
 input
   color: var(--main-color)
 
-.dropdown
-  position: relative
-
-  section
-    background-color: var(--main-color)
-    position: absolute
-    top: 4.2rem
-    right: 0
-    border-radius: 0.5rem
-    overflow: hidden
-
-    div
-      padding: 1rem 2rem
-      p
-        margin: 1em 0
-        display: block
-
-    div:hover
-      background-color: var(--secondary-color)
-
-.dir-table
-  width: 100%
-  margin: 0
-  position: relative
-
-  tr:last-child td
-    border: none
-
-.hold-table
-  position: relative
-  display: block
-  width: 100%
-  margin-bottom: 1rem
-  border-radius: 0.5rem
-  overflow: hidden
-
-  section
-    position: relative
-    overflow-y: scroll
-    -ms-overflow-style: none
-    scrollbar-width: none
-    max-height: 50vh
-    background-color: var(--main-bg-color)
-
-.hold-table section::-webkit-scrollbar
-  display: none
-
-.dir-root
-  box-sizing: border-box
-  padding: 0 2rem
-
-.dropzone-root
-  height: 100%
-  position: absolute
-  z-index: -1
-  width: 100%
-  background-color: var(--secondary-bg-color)
-  border-radius: 0.25rem
-  display: flex
-  justify-content: center
-  align-items: center
-
-  h3
-    line-height: 0
-
-.dir-item:hover
-  background-color: var(--secondary-bg-color)
-
 input[type="file"]
   display: none
-
-#item-menu
-  position: absolute
-  border-radius: 0.25rem
-  background-color: var(--main-bg-color)
-  box-shadow: 0 0 0.5rem var(--secondary-bg-color)
-  overflow: hidden
-
-  h5
-    text-align: center
-    padding: 1rem 4rem
-    margin-bottom: 1rem
-    min-width: 12vw
-
-  button
-    width: 100%
-    border-radius: 0
-    display: block
