--- a/src/css/comps/class_misc.sass
+++ b/src/css/comps/class_misc.sass
@@ -32,9 +32,15 @@
         word-break: break-all
         margin: 1em 0
         display: block
+        line-height: 0
+        font-size: 1.2rem
 
-    div:hover
-      background-color: var(--secondary-color)
+        &:last-child
+          color: var(--secondary-ovca)
+          font-size: 75%
+
+      &:hover
+        background-color: var(--secondary-color)
 
 
 .dropzone-root
