--- a/src/css/comps/var.sass
+++ b/src/css/comps/var.sass
@@ -25,7 +25,7 @@
 
 [data-loaded]
 
-  *:not(body, tr, .dropdown div, #item-menu button, .bar, input, button:hover, .button-clear)
+  *:not(body, tr, .dropdown div, #item-menu button, .bar, input, button:hover, .button-clear, .checkmark)
     transition: background-color 1s
 
   body
