--- a/src/css/netdrop.sass
+++ b/src/css/netdrop.sass
@@ -9,6 +9,7 @@
 @use "comps/id_misc"
 @use "comps/responsive"
 @use "text-themes/themes"
+@use "comps/checkbox"
 
 html
   min-height: 100vh
@@ -41,6 +42,7 @@ nav > div:last-child
     flex-grow: 1
     display: flex
     justify-content: space-between
+    flex-direction: row-reverse
 
 input[type="checkbox"]
   width: 0.9em
