--- a/src/css/text-themes/atom-one-dark.sass
+++ b/src/css/text-themes/atom-one-dark.sass
@@ -17,66 +17,103 @@
 .text-theme-atom-one-dark
 
   .hljs
-    color: #abb2bf
-    background: #282c34
+    background: #F0F0F0
+    color: #444
 
+  // .hljs-subst
+  // .hljs-formula,
+  // .hljs-attr,
+  // .hljs-property,
+  // .hljs-params
 
   .hljs-comment,
-  .hljs-quote
+  .token.comment
     color: #5c6370
-    font-style: italic
 
+  .hljs-tag,
+  .hljs-punctuation,
+  .token.tag, .token.punctuation, .token.namespace
+    font-weight: 400 !important
+    color: #e06c75
+    opacity: 1
 
-  .hljs-doctag,
-  .hljs-keyword,
-  .hljs-formula
-    color: #c678dd
+  .token.tag .token.punctuation, .token.doctype .token.punctuation
+    font-weight: 400 !important
+    color: inherit
 
-
-  .hljs-section,
-  .hljs-name,
-  .hljs-selector-tag,
-  .hljs-deletion,
-  .hljs-subst
+  .hljs-tag .hljs-name,
+  .hljs-tag .hljs-attr,
+  .token.tag .token.attr-name
+    font-weight: normal
     color: #e06c75
 
+  .token.operator,.token.url, .token.selector
+    color: var(--main-color)
 
-  .hljs-literal
-    color: #56b6c2
+  .token.keyword, .token.property, .token.punctuation, .token.atrule
+    color: var(--main-color)
+    font-weight: bold
 
-
-  .hljs-string,
-  .hljs-regexp,
-  .hljs-addition,
+  .hljs-keyword,
   .hljs-attribute,
-  .hljs-meta .hljs-string
+  .hljs-selector-tag,
+  .hljs-meta .hljs-keyword,
+
+  .hljs-doctag,
+  .hljs-name, .token.tag
+    font-weight: bold
+
+
+  .hljs-type,
+  .hljs-string,
+  .hljs-number,
+  .hljs-selector-id,
+  .hljs-selector-class,
+  .hljs-quote,
+  .hljs-template-tag,
+  .hljs-deletion,
+  .token.attr-value,.token.constant,.token.number,.token.symbol,.token.function-definition, .token.string, .token.method, .token.color, .token.unit, .token.selector .id, .token.selector .class
     color: #98c379
 
 
-  .hljs-attr,
+  .hljs-title,
+  .hljs-section,
+  .token.maybe-class-name,.token.function-definition
+    color: #61aeee
+    font-weight: bold !important
+
+
+  .hljs-regexp,
+  .hljs-symbol,
   .hljs-variable,
   .hljs-template-variable,
-  .hljs-type,
-  .hljs-selector-class,
+  .hljs-link,
   .hljs-selector-attr,
+  .hljs-operator,
   .hljs-selector-pseudo,
-  .hljs-number
+  .token.variable, .token.pseudo-class, .token.attr-name
+    color: #e6c07b
+
+  .hljs-literal,
+  .token.boolean
     color: #d19a66
 
 
-  .hljs-symbol,
+  .hljs-built_in,
   .hljs-bullet,
-  .hljs-link,
-  .hljs-meta,
-  .hljs-selector-id,
-  .hljs-title
+  .hljs-code,
+  .hljs-addition,
+  .token.type, .token.builtin, .token.char, .token.inserted
     color: #61aeee
 
+  .hljs-meta, 
+  .token.delimiter
+    color: #c678dd
+    font-weight: 400 !important
 
-  .hljs-built_in,
-  .hljs-title.class_,
-  .hljs-class .hljs-title
-    color: #e6c07b
+
+  .hljs-meta .hljs-string, .token.cdata, .token.doctype,.token.prolog
+    color: #c678dd
 
 
   .hljs-emphasis
@@ -85,7 +122,3 @@
 
   .hljs-strong
     font-weight: bold
-
-
-  .hljs-link
-    text-decoration: underline
