--- a/src/css/text-themes/vs-code.sass
+++ b/src/css/text-themes/vs-code.sass
@@ -96,3 +96,102 @@
 
   .hljs-emphasis
     font-style: italic
+
+    // sadmkldjiolasjidjasodkoaspdkopsakopdsopakd
+
+  .hljs-comment,
+  .token.comment
+    color: #007400
+
+  .hljs-tag,
+  .hljs-punctuation,
+  .token.tag, .token.punctuation, .token.namespace
+    font-weight: 400 !important
+    color: #aa0d91
+    opacity: 1
+
+  .token.tag .token.punctuation, .token.doctype .token.punctuation
+    font-weight: 400 !important
+    color: inherit
+
+  .hljs-tag .hljs-name,
+  .hljs-tag .hljs-attr,
+  .token.tag .token.attr-name
+    font-weight: normal
+    color: #aa0d91
+
+  .token.operator,.token.url, .token.selector
+    color: var(--main-color)
+
+  .token.keyword, .token.property, .token.punctuation, .token.atrule
+    color: var(--main-color)
+    font-weight: bold
+
+  .hljs-keyword,
+  .hljs-attribute,
+  .hljs-selector-tag,
+  .hljs-meta .hljs-keyword,
+
+  .hljs-doctag,
+  .hljs-name, .token.tag
+    font-weight: bold
+
+
+  .hljs-type,
+  .hljs-string,
+  .hljs-number,
+  .hljs-selector-id,
+  .hljs-selector-class,
+  .hljs-quote,
+  .hljs-template-tag,
+  .hljs-deletion,
+  .token.attr-value,.token.constant,.token.number,.token.symbol,.token.function-definition, .token.string, .token.method, .token.color, .token.unit, .token.selector .id, .token.selector .class
+    color: #c41a16
+
+
+  .hljs-title,
+  .hljs-section,
+  .token.maybe-class-name,.token.function-definition
+    color: #4078f2
+    font-weight: bold !important
+
+
+  .hljs-regexp,
+  .hljs-symbol,
+  .hljs-variable,
+  .hljs-template-variable,
+  .hljs-link,
+  .hljs-selector-attr,
+  .hljs-operator,
+  .hljs-selector-pseudo,
+  .token.variable, .token.pseudo-class, .token.attr-name
+    color: #3F6E74
+
+  .hljs-literal,
+  .token.boolean
+    color: #1c00cf
+
+
+  .hljs-built_in,
+  .hljs-bullet,
+  .hljs-code,
+  .hljs-addition,
+  .token.type, .token.builtin, .token.char, .token.inserted
+    color: #5c2699
+
+  .hljs-meta, 
+  .token.delimiter
+    color: #643820
+    font-weight: 400 !important
+
+
+  .hljs-meta .hljs-string, .token.cdata, .token.doctype,.token.prolog
+    color: #643820
+
+
+  .hljs-emphasis
+    font-style: italic
+
+
+  .hljs-strong
+    font-weight: bold
